objects/rest_callout_config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AppKey__c</fullName>
        <label>Application Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Resource_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Resource Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Shift Rest Callout Config</label>
</CustomObject>